fix: fix breadcrumb alignment

--- a/resources/assets/styles/04-components/_single.scss
+++ b/resources/assets/styles/04-components/_single.scss
@@ -3,6 +3,11 @@
 	clear: both;
 }
 
+.woocommerce-breadcrumb {
+	margin-right: auto !important;
+	margin-left: auto !important;
+}
+
 .woocommerce .button.alt,
 .wc-block-cart__submit-button,
 .wc-block-components-checkout-place-order-button {
